--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body class="container bg-warning">
+<body class="container bg-primary">
    <center>
-       <h1>Akan Birthday calculator </h1>
+       <h1 class="head">Akan Birthday calculator </h1>
        <p>fill the form below</p>
        <form action="">
            <label >Day</label><br><br>
