patch:modified-html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container bg-success">
    <center>
-       <h1 class="head">Akan Birthday Calculator </h1>
+       <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
        <p>fill the form below</p>
        <form action="">
            <label >Day</label><br><br>
