--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
        <p>fill the form below</p>
        <form action="">
-           <label >Day</label><br><br>
+           <label class="text">Day</label><br><br>
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
            <label> Month</label><br><br>
            <input type="number" id="month" min = "1" max = "12"><br><br>
