--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <form action="">
            <label class="text">Day</label><br><br>
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
-           <label> Month</label><br><br>
+           <label class="text"> Month</label><br><br>
            <input type="number" id="month" min = "1" max = "12"><br><br>
            <label >Year</label><br><br>
            <input type="number" id="year"><br><br>
