--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
            <label class="text"> Month</label><br><br>
            <input type="number" id="month" min = "1" max = "12"><br><br>
-           <label >Year</label><br><br>
+           <label class="text">Year</label><br><br>
            <input type="number" id="year"><br><br>
            <label>Gender</label><br><br>
      <select id="gender" required>
