--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <input type="number" id="month" min = "1" max = "12"><br><br>
            <label class="text">Year</label><br><br>
            <input type="number" id="year"><br><br>
-           <label>Gender</label><br><br>
+           <label class="text">Gender</label><br><br>
      <select id="gender" required>
         <option value="male">Male</option>
         <option value="female">Female</option>
