--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container bg-success">
    <center>
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
-       <p>Fill the form below</p>
+       <p class="text">Fill the form below</p>
        <form action="">
            <label class="text">Day</label><br><br>
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
