--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <p class="text">Fill the form below</p>
        <form action="">
            <label class="text">Date</label><br><br>
-           <input type ="number"  id="day"  required max="31" min="1"><br><br>
+           <input type ="number"  id="date"  required max="31" min="1"><br><br>
            <label class="text"> Month</label><br><br>
            <input type="number" id="month" min = "1" max = "12"><br><br>
            <label class="text">Year</label><br><br>
