--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
            <label class="text">Year</label><br><br>
            <input type="number" id="year"><br><br>
            <label class="text">Gender</label><br><br>
-     <select id="gender" required>
+            <select id="gender" required>
         <option value="male">Male</option>
         <option value="female">Female</option>
       </select><br><br>
-    <input type="submit" value="submit" onclick="findDay()"><br>
+    <input type="submit" value="submit" onclick="findDate()"><br>
        </form>
    </center>
 <script src="script.js"></script>
