--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
        <p class="text">Fill the form below</p>
        <form action="">
-           <label class="text">Date</label><br><br>
-           <input type ="number"  id="date"  required max="31" min="1"><br><br>
+           <label class="text">Day</label><br><br>
+           <input type ="number"  id="day"  required max="31" min="1"><br><br>
            <label class="text"> Month</label><br><br>
            <input type="number" id="month" min = "1" max = "12"><br><br>
            <label class="text">Year</label><br><br>
@@ -24,7 +24,7 @@
         <option value="male">Male</option>
         <option value="female">Female</option>
       </select><br><br>
-    <input type="submit" value="submit" onclick="findDate()"><br>
+    <input type="submit" value="submit" onclick="findDay()"><br>
        </form>
    </center>
 <script src="script.js"></script>
