patch:modified html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container bg-success">
    <center>
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
-       <img src="/images/ghana.jpg" alt="">
+       <img src="images/ghana.jpg" alt="">
        <p class="text">Fill the form below</p>
        <form action="">
            <label class="text">Day</label><br><br>
