patch:modified html file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body class="container bg-success">
    <center>
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
-         <img src="images/ghana.jpg" class="" alt="">
+         <img src="images/ghana.jpg" class="img-thumbnail" alt="">
        <p class="text">Fill the form below</p>
+       <p></p>
        <form action="">
            <label class="text">Day</label><br><br>
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
