patch:modified html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <h1 class="head text-white fw-bold">Akan Birthday Calculator </h1>
          <img src="images/ghana.jpg" class="img-thumbnail" alt="">
        <p class="text">Fill the form below</p>
-       <p>This is Ghana naming form that you fill as per requirements below submit and have results</p>
+       <p class="para">This is Ghana naming form that you fill as per requirements below submit and have results</p>
        <form action="">
            <label class="text">Day</label><br><br>
            <input type ="number"  id="day"  required max="31" min="1"><br><br>
